--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <section class="player player--0 player--active">
-        <h2 class="name" id="name--0">Player 1</h2>
+        <h2 class="name" id="name--0">Una</h2>
         <p class="score" id="score--0">64</p>
         <div class="current">
           <p class="current-label">Current</p>
@@ -18,7 +18,7 @@
         </div>
       </section>
       <section class="player player--1">
-        <h2 class="name" id="name--1">Player 2</h2>
+        <h2 class="name" id="name--1">Stefan</h2>
         <p class="score" id="score--1">23</p>
         <div class="current">
           <p class="current-label">Current</p>
