--- a/Fundamentals/9/index.html
+++ b/Fundamentals/9/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>A Closer Look at Functions</title>
+    <title>Data Structures and Modern Operators</title>
     <style>
       body {
         height: 100vh;
@@ -21,25 +21,19 @@
         text-align: center;
         color: white;
       }
-      .buy,
-      .poll {
-        font-size: 1.6rem;
-        padding: 1rem 2rem;
-        position: absolute;
-        top: 2rem;
+      button {
+        width: 50px;
+        height: 20px;
+        margin: 10px;
       }
-      .buy {
-        left: 2rem;
-      }
-      .poll {
-        right: 2rem;
+      textarea {
+        width: 300px;
+        height: 100px;
       }
     </style>
   </head>
   <body>
-    <h1>A Closer Look at Functions</h1>
-    <button class="buy">Buy new plane 🛩</button>
-    <button class="poll">Answer poll ⁉️</button>
+    <h1>Data Structures and Modern Operators</h1>
     <script src="script.js"></script>
   </body>
 </html>
